src/components/App/App.css
body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 0px;
}

.app-background {
    background-color: #041F59;
    height: 100vh;
}

.app-admin-card {
    height: 450px;
    width: 400px;
}

#app-header {
    background-color: #041F59;
    height: 60px;
    width: 100vw;
    padding-left: 10px;
}

#app-footer {
    border-top: solid grey 1px;
    padding: 8px;
    margin-top: 36px;
}

#app-header-logout-button {
    margin-right: 16px;
}

#app-navigation {
    border: solid grey 1px;
    height: 80vh;
    /* height: 100%; */
    /* max-height: 80vh; */
}

#app-navigation-site-section {
    background-color: lightgrey;
    height: 40px;
    border-bottom: solid grey 1px;
}

#app-navigation-site-button {
    margin-left: 6px;
    height: 24px;
}

#app-navigation-button {
    margin-right: 6px;
    height: 24px;
}

#app-form-header {
    background-color: lightgrey;
    border-top: solid grey 1px;
    border-bottom: solid grey 1px;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    height: 40px;
    padding-left: 10px;
    margin-top: 24px;
    min-width: 1000px;
}

#app-form-body {
    background: rgb(237, 237, 237);
    /* height: 98%; */
    /* max-height: 80vh; */
    height: 78vh;
    border-left: solid grey 1px;
    border-right: solid grey 1px;
    border-bottom: solid grey 1px;
    margin-left: 24px;
    margin-right: 24px;
    min-width: 1000px;
}

#app-form-header-delete-button {
    margin-top: 3px;
    margin-right: 6px;
    height: 24px;
}

.navigation-label {
    height: 30px;
}

.site-table-cell-edit-button {
    border: solid grey 1px;
}

.site-table-cell-load-button {
    height: 32px;
}

.navigation-tree-add-button {
    height: 30px;
    font-style:italic;
}

.app-form-header-label {
    color: black;
    margin: 0px;
    margin-top: 4px;
}

.app-form-body-container {
    padding: 16px;
    height: 100%;
}

.app-form-body-text-field {
    background-color: white;
}

#form-body-upper {
    /* background-color: red; */
    /* height: 38%; */
    width: 100%;
    height: 300px;
}

#form-body-lower {
    /* background-color: green; */
    width: 100%;
}

#form-table {
    /* position: relative;        TRIED ALL THESE THINGS
    display: flex;                HOW DO I GET THIS TABLE TO AUTO-GROW?
    flex-direction: column; */
    /* height: 400px; */
    height: 100%;
    border: solid grey 1px;
}

#form-header {
    border-bottom: solid grey 1px;
}

.table-cell {
    margin: 0px;
    padding: 0px;
}

/* .MuiTableCell-root {
    background-color: green;
    padding: 0px;
    margin: 0px;
  } */

  #test {
    max-height: 80vh;
  }

